Seccion usuarios completo

--- a/AdministradorDeCondominios/src/pages/balance/balance.html
+++ b/AdministradorDeCondominios/src/pages/balance/balance.html
@@ -5,11 +5,19 @@
   Ionic pages and navigation.
 -->
 <ion-header>
+  <ion-toolbar>
+    
+    <ion-title>
+      Balance
+    </ion-title>
 
-  <ion-navbar>
-    <ion-title>Balance</ion-title>
-  </ion-navbar>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="salir()">
+        <ion-icon name="close"></ion-icon>
+      </button>
+    </ion-buttons>
 
+  </ion-toolbar>
 </ion-header>
 
 
